@@ -2,6 +2,9 @@ Revision history for Perl extension Dist::Zilla::PluginBundle::Author::CHIM
 
 {{$NEXT}}
 
+    [ FEATURES ]
+    - added remove plugins functionality (via PluginRemover)
+
 0.051002 Fri Jul 18 06:33:43 2014 +0000
 
     [ FIXES ]
